2002-02-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c (apply_window_updates):
	fixed propagation of window border and title colours to the modules

2002-02-03 olicha  <olivier.chapuis@free.fr>

	* NEWS: TaskBar news

2002-01-30  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	added generation of utils/fvwm24_convert

2002-01-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (RaiseOrLowerWindow):
	(restack_windows):
	(collect_transients_recursive):
	* fvwm/icons.c (get_visible_icon_window_count):
	fixed stack ring corruption with icons that have either no picture or
	no title

2002-01-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/read.c (run_command_stream):
	fixed an error message

2002-01-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	changed version to 2.4.6

	* fvwm/conditional.c (CreateConditionMask):
	fixed parsing of conditions with more than one comma

2002-01-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (MenuInteraction):
	small bug fixes

2002-01-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (expand):
	fixed core dump when using something like $[$v] in a command

2002-01-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c (flush_window_updates):
	fixed unnecessary window style updates

	* fvwm/style.c (parse_and_set_window_style):
	* fvwm/add_window.c (RestoreWithdrawnLocation):
	(AddWindow):
	(setup_frame_attributes):
	* fvwm/fvwm.h (FvwmWindow):
	Fvwm does no longer disable backing store on all of its windows. This
	cause too many problems with some applications, e.g. rdist.  Introduced
	the new style BackingStoreWindowDefault that tells fvwm not to modify
	the backing store attribute on the client window - which now is the
	default.

2002-01-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	fixed building with libstroke-0.5.1 on Solaris8

	* fvwm/icons.c (GetIconBitmap):
	(GetIconWindow):
	Ignore client icons that have the wrong depth
