@@ -1,3 +1,8 @@
+2002-02-07  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/icons.c (GetXPMFile):
+	suppress unnecessary error message for xmb icons
+
 2002-02-06  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/update.c (apply_window_updates):
